Upnp/Api/C/Zapp.h

typedef THandle ZappHandleNetworkInterface;
typedef THandle ZappHandleNetworkInterfaceList;
typedef THandle ZappHandleInitParams;
typedef void (*ZappCallbackMsg)(void* aPtr, const char* aMsg);
typedef void (*ZappCallback)(void* aPtr);
typedef void (*ZappCallbackFreeExternal)(void* aPtr);
DllExport int32_t ZappLibraryInitialise(ZappHandleInitParams aInitParams);
DllExport int32_t ZappLibraryInitialiseMinimal(ZappHandleInitParams aInitParams);
DllExport void ZappLibraryStartCp();
DllExport void ZappLibraryStartDv();
DllExport void ZappLibraryStartCombined();
DllExport void ZappLibraryClose();
DllExport ZappHandleInitParams ZappInitParamsCreate();
DllExport void ZappInitParamsDestroy(ZappHandleInitParams aParams);
DllExport void ZappInitParamsSetLogOutput(ZappHandleInitParams aParams, ZappCallbackMsg aCallback, void* aPtr);
DllExport void ZappInitParamsSetFatalErrorHandler(ZappHandleInitParams aParams, ZappCallbackMsg aCallback, void* aPtr);
DllExport void ZappInitParamsSetAsyncBeginHandler(ZappHandleInitParams aParams, ZappCallbackAsync aCallback, void* aPtr);
DllExport void ZappInitParamsSetAsyncEndHandler(ZappHandleInitParams aParams, ZappCallbackAsync aCallback, void* aPtr);
DllExport void ZappInitParamsSetAsyncErrorHandler(ZappHandleInitParams aParams, ZappCallbackAsync aCallback, void* aPtr);
DllExport void ZappInitParamsSetDefaultSubnet(ZappHandleInitParams aParams, TIpAddress aSubnet);
DllExport void ZappInitParamsSetSubnetChangedListener(ZappHandleInitParams aParams, ZappCallback aCallback, void* aPtr);
DllExport void ZappInitParamsSetTcpConnectTimeout(ZappHandleInitParams aParams, uint32_t aTimeoutMs);
DllExport void ZappInitParamsSetMsearchTime(ZappHandleInitParams aParams, uint32_t aSecs);
DllExport void ZappInitParamsSetMsearchTtl(ZappHandleInitParams aParams, uint32_t aTtl);
DllExport void ZappInitParamsSetNumEventSessionThreads(ZappHandleInitParams aParams, uint32_t aNumThreads);
DllExport void ZappInitParamsSetNumXmlFetcherThreads(ZappHandleInitParams aParams, uint32_t aNumThreads);
DllExport void ZappInitParamsSetNumActionInvokerThreads(ZappHandleInitParams aParams, uint32_t aNumThreads);
DllExport void ZappInitParamsSetNumInvocations(ZappHandleInitParams aParams, uint32_t aNumInvocations);
DllExport void ZappInitParamsSetNumSubscriberThreads(ZappHandleInitParams aParams, uint32_t aNumThreads);
DllExport void ZappInitParamsSetPendingSubscriptionTimeout(ZappHandleInitParams aParams, uint32_t aTimeoutMs);
DllExport void ZappInitParamsSetFreeExternalCallback(ZappHandleInitParams aParams, ZappCallbackFreeExternal aCallback);
DllExport void ZappInitParamsSetDvMaxUpdateTime(ZappHandleInitParams aParams, uint32_t aSecs);
DllExport void ZappInitParamsSetDvNumPublisherThreads(ZappHandleInitParams aParams, uint32_t aNumThreads);
DllExport uint32_t ZappInitParamsTcpConnectTimeoutMs(ZappHandleInitParams aParams);
DllExport uint32_t ZappInitParamsMsearchTimeSecs(ZappHandleInitParams aParams);
DllExport uint32_t ZappInitParamsMsearchTtl(ZappHandleInitParams aParams);
DllExport uint32_t ZappInitParamsNumEventSessionThreads(ZappHandleInitParams aParams);
DllExport uint32_t ZappInitParamsNumXmlFetcherThreads(ZappHandleInitParams aParams);
DllExport uint32_t ZappInitParamsNumActionInvokerThreads(ZappHandleInitParams aParams);
DllExport uint32_t ZappInitParamsNumInvocations(ZappHandleInitParams aParams);
DllExport uint32_t ZappInitParamsNumSubscriberThreads(ZappHandleInitParams aParams);
DllExport uint32_t ZappInitParamsPendingSubscriptionTimeoutMs(ZappHandleInitParams aParams);
DllExport uint32_t ZappInitParamsDvMaxUpdateTimeSecs(ZappHandleInitParams aParams);
DllExport uint32_t ZappInitParamsDvNumPublisherThreads(ZappHandleInitParams aParams);
DllExport TIpAddress ZappNetworkInterfaceAddress(ZappHandleNetworkInterface aNif);
DllExport TIpAddress ZappNetworkInterfaceSubnet(ZappHandleNetworkInterface aNif);
DllExport const char* ZappNetworkInterfaceName(ZappHandleNetworkInterface aNif);
DllExport ZappHandleNetworkInterfaceList ZappSubnetListCreate();
DllExport uint32_t ZappSubnetListSize(ZappHandleNetworkInterfaceList aList);
DllExport ZappHandleNetworkInterface ZappSubnetAt(ZappHandleNetworkInterfaceList aList, uint32_t aIndex);
DllExport void ZappSubnetListDestroy(ZappHandleNetworkInterfaceList aList);
DllExport void ZappSetCurrentSubnet(ZappHandleNetworkInterface aSubnet);
DllExport void ZappSetDefaultSubnet();
DllExport void ZappFree(void* aPtr);